# enumap

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: enum_macro.rs  lib.rs  map.rs  serde.rs  set.rs
