[package]
name = "enumap"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
description = "A hashmap like interface for enums backed by an array"
license = "MIT OR Apache-2.0"
keywords = ["data-structure", "enum", "no_std"]
categories = ["embedded", "data-structures", "no-std", "no-std::no-alloc"]
repository = "https://github.com/Dav1dde/enumap"
edition = "2021"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
